--- a/app/pages/tabs/tabs.scss
+++ b/app/pages/tabs/tabs.scss
@@ -1,5 +1,7 @@
-/*
+// tabs.scss - styling for tabs across the app
+
+// make tab bar invisible everywhere - menu is enough
 #tabs ion-tabbar-section {
     display: none;
 }
-*/
+
