--- a/app/theme/app.variables.scss
+++ b/app/theme/app.variables.scss
@@ -21,7 +21,8 @@
 // are different per mode.
 
 $colors: (
-    primary:            #387ef5,
+    // primary:            #387ef5,
+    primary: #ccc,
     secondary:          #32db64,
     danger:             #f53d3d,
     favorite:           #69BB7B,
