library add folder page added

--- a/app/app.scss
+++ b/app/app.scss
@@ -5,7 +5,7 @@
 // class of ion-content whenever we (a) inject Ionic's Platform
 // class into a component, (b) add a [class]="platform.platforms()"
 // to the HTML template's ion-content tag.
-ion-content.core {
+ion-content {
     scroll-content {
         // hide scrollbar when in browser
         overflow-y: hidden;
