--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -12,3 +12,4 @@
 @import "../pages/tabs/tabs";
 @import "../pages/record/record";
 @import "../pages/library/library";
+@import "../pages/add-folder/add-folder";
