--- a/app/pages/add-folder/add-folder.scss
+++ b/app/pages/add-folder/add-folder.scss
@@ -1,5 +1,8 @@
 // style definitions for AddFolder Page class
 
+// wraps error message with some height so that
+// when it disappears, the add button doesn't jump
+// too close to the input text input line
 ion-content ion-list form div.error-message-line {
     height: 2em;
 }
