before setting up bottom-tabs for selected library items

--- a/app/pages/add-folder/add-folder.scss
+++ b/app/pages/add-folder/add-folder.scss
@@ -6,3 +6,8 @@
 ion-content ion-list form div.error-message-container {
     height: 2em;
 }
+
+ion-content p.add-folder-path-message {
+    font-size: 13px;
+    text-align: center;
+}
