--- a/app/components/vu-gauge/vu-gauge.html
+++ b/app/components/vu-gauge/vu-gauge.html
@@ -1,3 +1,5 @@
+<!-- Copyright (C) 2015, 2016 Tracktunes Inc -->
+
 <svg fill="rgba(0,0,0,0)" width="100%" [attr.height]="height">
     <rect *ngFor="#led of leds" [attr.width]="ledWidth" [attr.height]="height" [attr.x]="led.x" [attr.stroke-width]="led.strokeWidth"
     [attr.fill]="led.fill" stroke="#FFF" />
