--- a/app/pages/add-folder/add-folder.scss
+++ b/app/pages/add-folder/add-folder.scss
@@ -1,3 +1,5 @@
+// Copyright (C) 2015, 2016 Tracktunes Inc
+
 // style definitions for AddFolder Page class
 
 // wraps error message with some height so that
