--- a/app/pages/tabs/tabs.scss
+++ b/app/pages/tabs/tabs.scss
@@ -1,4 +1,4 @@
-// tabs.scss - styling for tabs across the app
+// Copyright (C) 2015, 2016 Tracktunes Inc
 
 // make tab bar invisible everywhere (app menu has the tabs)
 #nav-tabs ion-tabbar-section {
