--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -1,5 +1,6 @@
-// http://ionicframework.com/docs/v2/theming/
+// Copyright (C) 2015, 2016 Tracktunes Inc
 
+// http://ionicframework.com/docs/v2/theming/
 
 // App Shared Imports
 // --------------------------------------------------
