--- a/app/app.scss
+++ b/app/app.scss
@@ -1,3 +1,5 @@
+// Copyright (C) 2015, 2016 Tracktunes Inc
+
 // general scss for entire app
 
 // ".core" is the Ionic class Platform's platform.platform() result 
