--- a/app/theme/range-input.scss
+++ b/app/theme/range-input.scss
@@ -1,3 +1,5 @@
+// Copyright (C) 2015, 2016 Tracktunes Inc
+
 // range-input.scss - global scss for <input type="range"> element
 // Based on article and less code (first converted using less2sass) at:
 // https://css-tricks.com/styling-cross-browser-compatible-range-inputs-css/
