refactored waitForAppState completely out and waitForDB only used locally and on lowest level function

--- a/app/theme/app.variables.scss
+++ b/app/theme/app.variables.scss
@@ -29,6 +29,7 @@ $colors: (
     favorite:           #69BB7B,
 
     dark:               black,
+    almost-dark:        #222,
     darkest-gray:       #333,
     dark-gray:          #666,
     medium-gray:        gray,
