--- a/app/theme/app.variables.scss
+++ b/app/theme/app.variables.scss
@@ -22,20 +22,17 @@
 // are different per mode.
 
 $colors: (
-    // primary:            #387ef5,
     primary: #ccc,
-    secondary:          #32db64,
-    danger:             #f53d3d,
-    favorite:           #69BB7B,
 
-    dark:               black,
+    dark:               #000,
     almost-dark:        #222,
     darkest-gray:       #333,
     dark-gray:          #666,
     medium-gray:        gray,
     light-gray:         #999,
     lightest-gray:      #ccc,
-    light:              white,
+    almost-light:       #ddd,
+    light:              #FFF,
     
     logo-red:           #b92025,
     logo-orange:        #f27321
